--- a/web/src/components/project-preview-grid.module.css
+++ b/web/src/components/project-preview-grid.module.css
@@ -1,12 +1,12 @@
-@import '../styles/custom-media.css';
-@import '../styles/custom-properties.css';
+@import "../styles/custom-media.css";
+@import "../styles/custom-properties.css";
 
 .root {
   margin: 2em 0 4em;
 }
 
 .headline {
-  font-size: var(--font-micro-size);
+  font-size: var(--font-small-size);
   line-height: var(--font-micro-line-height);
   font-weight: 600;
   text-transform: uppercase;
@@ -19,7 +19,7 @@
   padding: 0;
   list-style: none;
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: repeat(auto-fill, 1fr);
   grid-gap: 2em;
 
   @media (--media-min-small) {
@@ -32,20 +32,22 @@
 }
 
 .browseMoreNav {
-  composes: small from './typography.module.css';
-  margin-top: 1rem;
   text-align: right;
+  font-weight: bolder;
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  background-color: #d3d3d3;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  text-decoration: none;
 
-  @nest & a {
-    display: inline-block;
-    padding: 0.5rem 0;
-    color: inherit;
-    text-decoration: none;
-
-    @media (hover: hover) {
-      @nest &:hover {
-        color: var(--color-accent);
-      }
+  @media (hover: hover) {
+    filter: brightness(1.1);
+    @nest &:hover {
+      color: var(--color-accent);
     }
   }
 }
