--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -1,9 +1,11 @@
-@import '../styles/custom-media.css';
-@import '../styles/custom-properties.css';
+@import "../styles/custom-media.css";
+@import "../styles/custom-properties.css";
 
 .root {
   position: relative;
   z-index: 100;
+  background-color: black;
+  color: white;
 }
 
 .wrapper {
