--- a/web/src/styles/layout.css
+++ b/web/src/styles/layout.css
@@ -1,4 +1,4 @@
-@import './custom-properties.css';
+@import "./custom-properties.css";
 
 html {
   font-family: var(--font-family-sans);
@@ -18,4 +18,9 @@ body,
 body > div,
 body > div > div {
   height: 100%;
+}
+
+a,
+u {
+  text-decoration: none !important;
 }
