--- a/web/src/components/project-preview-grid.module.css
+++ b/web/src/components/project-preview-grid.module.css
@@ -3,15 +3,16 @@
 
 .root {
   margin: 2em 0 4em;
+  margin-bottom: 80px;
 }
 
 .headline {
-  font-size: var(--font-small-size);
-  line-height: var(--font-micro-line-height);
-  font-weight: 600;
+  font-size: var(--font-title2-size);
+  line-height: var(--font-base-line-height);
+  font-weight: 900;
   text-transform: uppercase;
   letter-spacing: 0.5px;
-  margin: 2rem 0;
+  margin: 2rem 0 1.5rem 0;
 }
 
 .grid {
@@ -23,10 +24,12 @@
   grid-gap: 2em;
 
   @media (--media-min-small) {
+    grid-gap: 1.5em;
     grid-template-columns: 1fr 1fr;
   }
 
   @media (--media-min-medium) {
+    grid-gap: 2em;
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 }
@@ -45,20 +48,16 @@
   text-decoration: none;
   cursor: pointer;
   transition: all 0.2s linear;
-  background-color: #dddddd;
+  background-color: rgb(241, 241, 241);
 
   @media (hover: hover) {
     @nest &:hover {
       color: var(--color-accent);
     }
   }
-
-  @media (--media-min-small) {
-    background-color: white;
-  }
 }
 
 .browseMoreNav:hover {
-  filter: brightness(1.1);
   background-color: #dddddd;
+  text-decoration: underline;
 }
