--- a/web/src/components/layout.module.css
+++ b/web/src/components/layout.module.css
@@ -1,5 +1,5 @@
-@import '../styles/custom-media.css';
-@import '../styles/custom-properties.css';
+@import "../styles/custom-media.css";
+@import "../styles/custom-properties.css";
 
 .content {
   background: var(--color-white);
@@ -11,7 +11,7 @@
 }
 
 .footer {
-  border-top: 1px solid var(--color-very-light-gray);
+  /* border-top: 1px solid var(--color-very-light-gray); */
 
   @nest & a {
     color: inherit;
